# stroemung

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  NOTES.md  README.md  justfile
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: audit-ci.yml  audit.yml  cd.yml  ci.yml  python.yml
html/: index.html
python/: .gitattributes  README.md  generate_test_data.py  justfile  requirements-dev.txt  requirements.txt  test_generate_test_data.py
python/templates/: obstacle.par
python/test_data/: small_data.out  small_data.out_expected.json  small_data.out_rust_expected.json
src/: args.rs  cell.rs  grid.rs  lib.rs  main.rs  math.rs  simulation.rs  types.rs  ui_state.rs  visualization.rs
src/grid/: mod.rs  presets.rs
src/snapshots/: stroemung__grid__tests__deserialize.snap  stroemung__grid__tests__serialize.snap  stroemung__simulation__tests__deserialize-2.snap  stroemung__simulation__tests__deserialize.snap  stroemung__simulation__tests__serialize.snap  stroemung__simulation__tests__simulation_tick-2.snap  stroemung__simulation__tests__simulation_tick-3.snap  stroemung__simulation__tests__simulation_tick-4.snap  stroemung__simulation__tests__simulation_tick-5.snap  stroemung__simulation__tests__simulation_tick-7.snap  stroemung__simulation__tests__simulation_tick-8.snap  stroemung__simulation__tests__simulation_tick-9.snap  stroemung__simulation__tests__simulation_tick.snap
src/test_data/: simple_grid.json  simple_simulation.json  (+1 more)
tests/: test_file_parsing.rs
(+6 files in other folders)
