[package]
name = "stroemung"
version = "0.1.1"
edition = "2021"
description = "A Computational Fluid Dynamics (CFD) simulator in Rust"
repository = "https://github.com/wickedchicken/stroemung"
license = "MIT"
categories = ["mathematics", "science", "simulation"]
keywords = ["cfd", "fluid-dynamics", "navier-stokes", "simulation"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.30", features = ["derive"] }
macroquad = "0.4.13"
ndarray = { version = "0.16.1", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"

[dev-dependencies]
insta = { version = "1.42.2", features = ["json"] }

# Recommended by the insta documentation
[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3
